--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,4 +41,5 @@
 <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 {% endif %}
 
+{% seo title=false %}
 </head>
