--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -86,8 +86,8 @@ layout: default
 
         {% if site.addthis_id %}
         <div class="share">
-          <!-- Go to www.addthis.com/dashboard to customize your tools -->
-          <div class="addthis_sharing_toolbox"></div>
+          <!-- Go to www.addthis.com/dashboard to customize your tools --> 
+          <div class="addthis_inline_share_toolbox"></div
         </div>
         {% endif %}
 
