--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
       <li><a href="{{ site.baseurl }}/"><i class="fa fa-home"></i> Home</a></li>
       <li><a href="{{ site.baseurl }}/posts/"><i class="fa fa-archive"></i> All Posts</a></li>
       <li><a href="{{ site.baseurl }}/search/"><i class="fa fa-search"></i> Search</a></li>
+      <li><a href="{{ site.baseurl }}/random/"><i class="fa fa-random"></i> Random Post</a></li>
       <li><a href="https://learn.noxtal.com/"><i class="fas fa-hat-wizard"></i> Learn Hacking</a></li>
     </ul>
 
