--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700);
-@import "base16-monokai.css";
+@import url(https://stylishthemes.github.io/Syntax-Themes/pygments/css-github/pygments-base16-monokai-dark.css);
 
 /* Colours */
 $twitter:        #6dabda;
