--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,8 @@
 <meta name="msapplication-config" content="{{ site.baseurl }}/favicons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
+<script data-ad-client="{{ site.adsense }}" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 {% if site.addthis_id %}
 <!-- Go to www.addthis.com/dashboard to customize your tools --> 
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_id }}"></script>
