--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="{{ site.baseurl }}/js/jquery.mmenu.min.all.js"></script>
 <script type="text/javascript">
