--- a/css/style.scss
+++ b/css/style.scss
@@ -450,14 +450,21 @@ ul {
 	h1, h2, h3, h4, h5, h6 {
 		font-family: 'Montserrat', sans-serif;
 		margin-bottom: 10px;
+		font-weight: bold;
+	}
+
+	h1 {
+		margin-top: 60px;
 	}
 
 	h2 {
 		font-size: 36px;
+		margin-top: 30px;
 	}
 
 	h3 {
-		font-size: 28px;
+		font-size: 30px;
+		margin-top: 15px;
 	}
 
 	p {
